--- a/css/styles.css
+++ b/css/styles.css
@@ -199,3 +199,48 @@ tarjetas productos
     width: 100px;
     height: 120px;
 }
+/*============================================
+FORMULARIO
+=========================================*/
+.contenedor-form{
+    margin:auto;
+    margin-top: 30px;
+    width: 50%;
+    height:700px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    border-radius: 5px;
+}
+.products-form{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 5px;
+}
+.contenedor-input{
+    display: flex;  
+    flex-direction: column;
+    margin-bottom: 10px;
+    width: 50%;
+
+}
+.li-listados .img-listados{
+    width: 70px;
+    height: 50px;
+}
+.li-listados{
+
+    width: 75%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-around;
+    border-radius: 5px;
+
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+/* .contenedor-input .submit{
+} */
