--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ FORMULARIO
     margin:auto;
     margin-top: 30px;
     width: 50%;
-    height:700px;
+    height: 500px;;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     border-radius: 5px;
 }
@@ -232,14 +232,11 @@ FORMULARIO
 .li-listados{
 
     width: 75%;
-    height: 100%;
     margin: auto;
     display: flex;
     align-items: center;
-    align-content: center;
     justify-content: space-around;
     border-radius: 5px;
-
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 /* .contenedor-input .submit{
