--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ tarjetas productos
     display: flex;
     flex-wrap: wrap;
      gap: 20px;
-    border: 2px solid turquoise;
+    /*border: 2px solid turquoise;*/
     justify-content: space-around;
     height: 700px;
     margin-top:20px; 
@@ -206,7 +206,8 @@ FORMULARIO
     margin:auto;
     margin-top: 30px;
     width: 50%;
-    height: 500px;;
+    min-height: 400px;
+    max-height: 900px;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     border-radius: 5px;
 }
